--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -12,4 +12,6 @@ chdir = %d
 module = server:app
 processes = 4
 threads = 2
+# Increase buffer size to handle Safari's huge request headers
+buffer-size = 8192
 #stats = 127.0.0.1:9191
