--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@ nohup.out
 /secret_key
 secret_key_google_text_to_speech
 /static/audio
-/experiments.db
+/*.db
+/*.csv
+/*.html
 /uploads
 
 # Python byte-compiled / optimized / DLL files
