review branch - specific review api script - participants will score one subject-project pair at a time - updated review page and scoring page - consent form upload - lots of js review modules

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@ nohup.out
 /static/audio
 /experiments.db
 /uploads
+/test_config.py
+*.db
+*db
+/output.mp3
+/output.wav
+/consent_form_uploads
 
 # Python byte-compiled / optimized / DLL files
 __pycache__/
@@ -21,3 +27,19 @@ venv.bak/
 # Flask stuff:
 instance/
 .webassets-cache
+
+# macOS
+.DS_Store
+**/.DS_Store
+
+# Backup and temporary files
+*.save
+*.tmp.wav
+*.log
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
